tests/snapshots/snapshot_comprehensive__snap_capability_manifest_mixed_support.snap
---
source: tests/snapshot_comprehensive.rs
expression: manifest_to_value(&manifest)
---
{
  "extended_thinking": "emulated",
  "mcp_client": "unsupported",
  "streaming": "native",
  "tool_bash": {
    "restricted": {
      "reason": "sandboxed environment"
    }
  },
  "tool_read": "native"
}
