tests/snapshots/snapshot_comprehensive__snap_capability_manifest_streaming_only.snap
---
source: tests/snapshot_comprehensive.rs
expression: manifest_to_value(&manifest)
---
{
  "streaming": "native"
}
