tests/snapshots/snapshot_comprehensive__snap_capability_manifest_tool_suite.snap
---
source: tests/snapshot_comprehensive.rs
expression: manifest_to_value(&manifest)
---
{
  "tool_bash": "native",
  "tool_edit": "native",
  "tool_glob": "emulated",
  "tool_grep": "emulated",
  "tool_read": "native",
  "tool_write": "native"
}
