tests/snapshots/snapshot_comprehensive__snap_config_default.snap
---
source: tests/snapshot_comprehensive.rs
expression: cfg
---
{
  "log_level": "info",
  "backends": {}
}
