tests/snapshots/snapshot_comprehensive__snap_config_with_mock_backend.snap
---
source: tests/snapshot_comprehensive.rs
expression: cfg
---
{
  "default_backend": "mock",
  "log_level": "info",
  "backends": {
    "mock": {
      "type": "mock"
    }
  }
}
