tests/snapshots/snapshot_comprehensive__snap_envelope_fatal_with_error_code.snap
---
source: tests/snapshot_comprehensive.rs
expression: envelope_to_value(&env)
---
{
  "error": "backend timed out",
  "error_code": "backend_timeout",
  "ref_id": "run-002",
  "t": "fatal"
}
