tests/snapshots/snapshot_comprehensive__snap_envelope_fatal_with_ref.snap
---
source: tests/snapshot_comprehensive.rs
expression: envelope_to_value(&env)
---
{
  "error": "out of memory",
  "ref_id": "run-001",
  "t": "fatal"
}
