tests/snapshots/snapshot_comprehensive__snap_envelope_fatal_without_ref.snap
---
source: tests/snapshot_comprehensive.rs
expression: envelope_to_value(&env)
---
{
  "error": "process crashed",
  "ref_id": null,
  "t": "fatal"
}
